basiliq/src/serve/tests/requests/select/objs/snapshots/basiliq__serve__tests__requests__select__objs__include__include_rel_o2m.snap
---
source: basiliq/src/serve/tests/requests/select/objs/include.rs
expression: res

---
{
  "jsonapi": {
    "version": "1.0"
  },
  "data": [
    {
      "type": "public__peoples",
      "id": "1649b1e9-8a5f-4f52-b331-c07ce3bccc6f",
      "attributes": {
        "age": 22,
        "first-name": "Francis",
        "gender": "M",
        "last-name": "Le Roy",
        "twitter": null
      },
      "relationships": {
        "public__people-article": {
          "data": [
            {
              "type": "public__people-article",
              "id": "f77b0017-1dfd-4ea1-b036-b228289f89e0"
            },
            {
              "type": "public__people-article",
              "id": "f0523b1e-30df-418d-83dc-876e4c78cfa9"
            }
          ]
        }
      }
    },
    {
      "type": "public__peoples",
      "id": "777cc565-c66b-4942-ab44-8fc5f194b804",
      "attributes": {
        "age": 34,
        "first-name": "Somebody",
        "gender": "F",
        "last-name": "Wuhu",
        "twitter": "@randomhandle"
      },
      "relationships": {
        "public__people-article": {
          "data": [
            {
              "type": "public__people-article",
              "id": "38e9e927-d748-46a8-a843-f9f3c31b83a9"
            },
            {
              "type": "public__people-article",
              "id": "538d2b60-cb73-4b7d-bc39-cceac6abecb8"
            }
          ]
        }
      }
    },
    {
      "type": "public__peoples",
      "id": "961e543a-4b22-4d48-a8e5-c1eafada950f",
      "attributes": {
        "age": null,
        "first-name": "AAAAAAAA",
        "gender": null,
        "last-name": "BBBBBBBBB",
        "twitter": null
      }
    }
  ],
  "included": [
    {
      "type": "public__people-article",
      "id": "38e9e927-d748-46a8-a843-f9f3c31b83a9"
    },
    {
      "type": "public__people-article",
      "id": "538d2b60-cb73-4b7d-bc39-cceac6abecb8"
    },
    {
      "type": "public__people-article",
      "id": "f0523b1e-30df-418d-83dc-876e4c78cfa9"
    },
    {
      "type": "public__people-article",
      "id": "f77b0017-1dfd-4ea1-b036-b228289f89e0"
    }
  ]
}
